--- a/servers/flaskserver/app/Dockerfile
+++ b/servers/flaskserver/app/Dockerfile
@@ -1,20 +1,22 @@
 # Use an official Python runtime as a parent image
 FROM python:3.7
+RUN apt-get update -y
+RUN apt-get install -y python-pip python-dev build-essential
 
 # Set the working directory to /app
+COPY . /app
+
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Make port 80 available to the world outside this container
-EXPOSE 80
+EXPOSE 5000
 
-# Define environment variable
-ENV NAME World
+ENTRYPOINT ["python"]
 
 # Run app.py when the container launches
-CMD ["python", "server.py"]
+CMD ["server.py"]
